--- a/eval.ipynb
+++ b/eval.ipynb
@@ -13,7 +13,8 @@
     ")\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelWithLMHead \n",
-    "import IPython.display as ipd"
+    "import IPython.display as ipd\n",
+    "from math import log"
    ]
   },
   {
@@ -49,6 +50,43 @@
     "        batch[\"speech\"] = speech.squeeze(0).numpy()\n",
     "        batch[\"sampling_rate\"] = '16000'\n",
     "    return batch\n",
+    "\n",
+    "def predict_beam(data,beamsize=3):\n",
+    "    features = processor(data[\"speech\"], sampling_rate=data[\"sampling_rate\"], padding=True, return_tensors=\"pt\")\n",
+    "    input_values = features.input_values.to(device)\n",
+    "    attention_mask = features.attention_mask.to(device)\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(input_values, attention_mask=attention_mask).logits\n",
+    "    decoded_results = []\n",
+    "    for logit in logits:\n",
+    "        sequences = [[[], 1.0]]\n",
+    "        pred_ids = torch.argmax(logit, dim=-1)\n",
+    "        mask = pred_ids.ge(1).unsqueeze(-1).expand(logit.size())\n",
+    "        vocab_size = logit.size()[-1]\n",
+    "        voice_prob = torch.nn.functional.softmax((torch.masked_select(logit, mask).view(-1,vocab_size)),dim=-1)\n",
+    "        while True:\n",
+    "            all_candidates = list()\n",
+    "            exceed = False\n",
+    "            for seq in sequences:\n",
+    "                tokens, score = seq\n",
+    "                gpt_input = torch.tensor([tokenizer.cls_token_id]+tokens).to(device)\n",
+    "                gpt_prob = torch.nn.functional.softmax(lm_model(gpt_input).logits, dim=-1)[:len(gpt_input),:]\n",
+    "                if len(gpt_input) >= len(voice_prob):\n",
+    "                    exceed = True\n",
+    "                comb_pred_ids = gpt_prob*voice_prob[:len(gpt_input)]\n",
+    "                v,i = torch.topk(comb_pred_ids,50,dim=-1)\n",
+    "                for tok_id,tok_prob in zip(i.tolist()[-1],v.tolist()[-1]):\n",
+    "                    candidate = [tokens + [tok_id], score + -log(tok_prob)]\n",
+    "                    all_candidates.append(candidate)\n",
+    "            ordered = sorted(all_candidates, key=lambda tup: tup[1])\n",
+    "            sequences = ordered[:beamsize]\n",
+    "            if exceed:\n",
+    "                break\n",
+    "\n",
+    "        for i in sequences:\n",
+    "            decoded_results.append(processor.decode(i[0]))\n",
+    "\n",
+    "    return decoded_results\n",
     "\n",
     "def predict(data, GPT_FIX=False):\n",
     "    features = processor(data[\"speech\"], sampling_rate=data[\"sampling_rate\"], padding=True, return_tensors=\"pt\")\n",
